fixed  logo image  on mobile devices

--- a/style.css
+++ b/style.css
@@ -219,9 +219,22 @@ ul {
         text-align: center
     }
 
+
+}
+
+@media only screen and (max-width : 768px) {
     .jumbotron {
-        background-image: url('./images/logo-med.jpg');
-        min-height: 75vh;
+        display: none !important;
+    }
+
+    .mobile-logo {
+        display: block;
+    }
+}
+
+@media only screen and (min-width : 769px) {
+    .mobile-logo {
+        display: none;
     }
 }
 
